@@ -108,6 +108,7 @@ LogFile=/tmp/zabbix_proxy.log
 ### Option: DBHost
 #	Database host name.
 #	If set to localhost, socket is used for MySQL.
+#	If set to empty string, socket is used for PostgreSQL.
 #
 # Mandatory: no
 # Default:
