@@ -11,6 +11,7 @@ A......... [ZBXNEXT-1189] implemented the "selectTrigger", "selectParentDependen
 ..F....... [ZBXNEXT-1181] redesign Host mass update (Eduard)
 
 Bug fixes:
+....I..PS. [ZBX-4941] added default DBHost configuration parameter value "localhost" (dimir)
 ....I..... [ZBX-4471] fixed warnings when applying 2.0 dbpatches (dimir)
 ..F....... [ZBX-4969] fixed item key param macro not resolved in simple graph popup (Vedmak)
 ..F....... [ZBX-4964] added requirements checks for xmlreader and xmlwriter (Vedmak)
